--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       <h2>📊 Top Insights</h2>
       <p>Visual breakdowns of network activity from parsed Zeek logs:</p>
       <h3>Top 10 Queried Domains</h3>
-      <img src="charts/top_domains.png" alt="Top Queried Domains" class="chart" />
+      <img src="charts/top_domains.jpg" alt="Top Queried Domains" class="chart" />
 
       <h3>Top 10 Destination Ports</h3>
-      <img src="charts/top_ports.png" alt="Top Destination Ports" class="chart" />
+      <img src="charts/top_ports.jpg" alt="Top Destination Ports" class="chart" />
 
       <h3>Top 10 HTTP User Agents</h3>
-      <img src="charts/top_user_agents.png" alt="Top HTTP User Agents" class="chart" />
+      <img src="charts/top_user_agents.jpg" alt="Top HTTP User Agents" class="chart" />
     </div>
 
     <div class="section">
