--- a/index.html
+++ b/index.html
@@ -106,23 +106,23 @@
       <h2>📊 Top Insights</h2>
       <p>Visual breakdowns of network activity from parsed Zeek logs:</p>
       <h3>Top 10 Queried Domains</h3>
-      <img src="charts/top_domains.jpg" alt="Top Queried Domains" class="chart" />
+      <img src="gh-pages/top_domains.jpg" alt="Top Queried Domains" class="chart" />
 
       <h3>Top 10 Destination Ports</h3>
-      <img src="charts/top_ports.jpg" alt="Top Destination Ports" class="chart" />
+      <img src="gh-pages/top_ports.jpg" alt="Top Destination Ports" class="chart" />
 
       <h3>Top 10 HTTP User Agents</h3>
-      <img src="charts/top_user_agents.jpg" alt="Top HTTP User Agents" class="chart" />
+      <img src="gh-pages/top_user_agents.jpg" alt="Top HTTP User Agents" class="chart" />
     </div>
 
     <div class="section">
       <h2>📸 Screenshots</h2>
-      <p>Check the <a href="../screenshots">screenshots folder</a> for visuals of terminal commands, packet analysis, and Wireshark captures.</p>
+      <p>Check the <a href="../Screenshots">screenshots folder</a> for visuals of terminal commands, packet analysis, and Wireshark captures.</p>
     </div>
 
     <div class="section">
       <h2>📁 Full Logs</h2>
-      <p>Explore all related log files including <code>conn.log</code>, <code>dns.log</code>, <code>http.log</code>, and <code>notice.log</code> <a href="../zeek-logs">here</a>.</p>
+      <p>Explore all related log files including <code>conn.log</code>, <code>dns.log</code>, <code>http.log</code>, and <code>notice.log</code> <a href="../Zeek-Logs">here</a>.</p>
     </div>
 
     <div class="section">
